# roboschool2018

./: .gitignore  README.md
car_description/: CMakeLists.txt  calc_tensors.py  package.xml
car_description/blender/: camera.blend  track.blend
car_description/launch/: view_model.launch
car_description/meshes/: body.dae  body.stl  camera.dae  wheel_left.dae  wheel_left.stl  wheel_right.dae  wheel_right.stl
car_description/rviz/: robot_model.rviz
car_description/urdf/: body.xacro  camera.xacro  car.xacro  left_right.xacro  wheel.xacro
car_gazebo/: CMakeLists.txt  package.xml
car_gazebo/launch/: gazebo.launch  keyboard.launch  spawn.launch  track.launch  track_keyboard.launch
car_gazebo/models/: database.config
car_gazebo/models/car_track/: model.config  track.sdf
car_gazebo/models/car_track/meshes/: track.dae
car_gazebo/models/traffic_light/: model.config  traffic_light.sdf  traffic_light.xacro
car_gazebo/scripts/: controller.py  twist_to_motors.py
car_gazebo/src/CarPlugin/: CarPlugin.cpp  CarPlugin.h
car_gazebo/src/LightPlugin/: LightPlugin.cpp  LightPlugin.h
car_gazebo/worlds/: car_empty.sdf  track.world
car_hackathon/: CMakeLists.txt  package.xml  stop.sh
car_hackathon/scripts/: car_helper.py  line_detection_example.py  line_mover.py
car_hackathon/src/: line_mover.cpp
car_msgs/: CMakeLists.txt  package.xml
car_msgs/msg/: MotorsControl.msg
raspberry/: car_helper.py
roboschool_common/: CMakeLists.txt  package.xml
roboschool_common/launch/: keyboard.launch  spawn.launch
roboschool_common/scripts/: twist_to_motors.py
test_robot/: CMakeLists.txt  package.xml
test_robot/launch/: gazebo.launch  keyboard.launch
test_robot/src/TestRobotPlugin/: TestRobotPlugin.cpp  TestRobotPlugin.h
test_robot/urdf/: body.xacro  test_robot.xacro  wheel.xacro
urdf_viz/: CMakeLists.txt  README.md  package.xml  robot_model.rviz  urdf.rviz
urdf_viz/launch/: urdf.launch  xacro.launch
