<?xml version="1.0"?>
<package format="2">
  <name>car_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo world for car model simulation</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <license>TODO</license>
  <author email="markovalex95@gmail.com">Markov Alexey</author>  

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
