<?xml version="1.0"?>
<package format="2">
  <name>car_hackathon</name>
  <version>0.0.0</version>
  <description>Template for roboschool-2018 hackathon with Gazebo and OpenCV</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <license>TODO</license>
  <author email="markovalex95@gmail.com">Markov Alexey</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>car_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <exec_depend>car_description</exec_depend>
  <exec_depend>car_gazebo</exec_depend>

  <export>
  </export>
</package>
