<?xml version="1.0"?>
<package format="2">
  <name>car_msgs</name>
  <version>0.0.0</version>
  <description>Car model control messages</description>
  
  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <license>TODO</license>
  <author email="markovalex95@gmail.com">Markov Alexey</author>  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>  
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>