<?xml version="1.0"?>
<package format="2">
  <name>test_robot</name>
  <version>0.0.0</version>
  <description>Template for project to learn, how to build own robot in Gazeb</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <license>TODO</license>
  <author email="markovalex95@gmail.com">Markov Alexey</author>
  
  <buildtool_depend>catkin</buildtool_depend>      
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>car_msgs</depend>

  <export>
  </export>
</package>
