<?xml version="1.0"?>
<package format="2">
  <name>urdf_viz</name>
  <version>0.0.0</version>
  <description>Simple URDF and XACRO viewers</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <license>TODO</license>
  <author email="markovalex95@gmail.com">Markov Alexey</author>  

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
